# python-gateway

./: .gitignore  README  TODO.md  pyproject.toml
.cursor/plans/: byoc_sse_sdk_9a844d68.plan.md
docs/: runner-sdk.md
examples/: byoc_openai_chat_completions.py  byoc_text_reversal.py  byoc_write_frames.py  byoc_write_text.py  camera_capture.py  encode_gateway_token.py  get_orchestrator_info.py  in_out_composite.py  logout.py  payments.py  registry_broker_flow.py  start_job.py  subscribe_events.py  write_control.py  write_frames.py
examples/runner/: byoc_live.py  byoc_request.py
examples/runner/hello_world/: Dockerfile  README.md  docker-compose.yml  pipeline.py  register_capability.py  test.sh
examples/runner/image_upscale/: Dockerfile  README.md  docker-compose.yml  pipeline.py  prepare_models.py  register_capability.py  requirements.txt  test.sh
examples/runner/live_depth/: Dockerfile  Dockerfile.mediamtx  (+6 more)
src/livepeer_gateway/: __init__.py  broker_http.py  byoc.py  byoc_payments.py  capabilities.py  channel_reader.py  channel_writer.py  codegen.py  control.py  errors.py  job_token.py  lv2v.py  media_decode.py  media_output.py  media_publish.py  oidc_auth.py  orch_info.py  orchestrator.py  payment_metadata.py  payments_base.py  registry_mode_plugins.py  registry_parser.py  registry_payment_session.py  registry_selector.py  registry_types.py  remote_signer.py  scope.py  segment_reader.py  selection.py  sse.py  token.py  trickle_publisher.py  trickle_subscriber.py
tests/: test_byoc_token.py  test_payment_metadata.py  test_registry_core.py  test_sse.py
(+56 files in other folders)
