[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "livepeer-gateway"
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.65.0",
  "protobuf>=4.25.0",
  "aiohttp>=3.9.0",
  "authlib>=1.3.0",
  "av>=11.0.0",
  "httpx>=0.27.0",
  "protobuf",
]

[project.scripts]
generate-lp-rpc = "livepeer_gateway.codegen:main"

[project.optional-dependencies]
dev = [
  "grpcio-tools>=1.65.0",
]

examples = [
  "numpy>=2.2.6",
  "opencv-python-headless>=4.13.0.90",
]

[tool.hatch.build.targets.wheel]
packages = ["src/livepeer_gateway", "src/net"]
